<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GMWORK!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_error">LoginError</string>
    <string name="logout">logout</string>
    <string name="crearPedidoSobreUsuario">Crear Pedido Con Esta Como Plantilla</string>
    <string name="borrar">borrarRegistro</string>
    <string name="asignar_producto">assignar producto</string>
    <string name="asignar">Asignar</string>
    <string name="fecha_entrega">FEntrega</string>
    <string name="cliente">Cliente</string>
    <string name="asignar_cliente">Asignar a el Cliente..</string>
    <string name="asignar_clientes">Asignar a el Cliente..</string>
    <string name="ges_pe">Gestionar Pedidos</string>
    <string name="ges_cli">Gestionar Clientes</string>
    <string name="cr">Crear</string>
    <string name="cliAVisitar">Seleccionar Clientes a Visitar</string>
    <string name="seleAVisitaGeo">Visitar clientes mas cercanos</string>
    <string name="GPSAlertDialogTitle">title</string>
    <string name="GPSAlertDialogMessage">This is a Message</string>
    <string name="cancel">cancel</string>
    <string name="aac_alta_cliente">introduce un nif....</string>
    <string name="aac_tv_nombre">Introduce un nombre...</string>
    <string name="aac_et_apellidos">introduce los apellidos....</string>
    <string name="aac_et_poblacion">Introduce una poblacion...</string>
    <string name="aac_et_calle">Introduce una calle...</string>
    <string name="aac_btn_gc">Guardar Cliente</string>
    <string name="aac_btn_co">Cancelar Operacion</string>
    <string name="aep_tv_titulo">Editar Pedido</string>
    <string name="agp_tv_gp">Gestion de Pedidos</string>
    <string name="am_tv_username">introduce tu usuario aqui...</string>
    <string name="am_tv_con">Introduce tu contraseña aqui...</string>
    <string name="am_btn_gd">Generar los Datos Locales...</string>
    <string name="am_btn_login">Login</string>


</resources>
