<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Pedido.UiCrearPedidoView">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/acp_tv_fEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/acp_et_FEntrega"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/fecha_entrega"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/acp_et_FEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp"
            android:layout_toLeftOf="@+id/acp_btn_sF"
            android:layout_toStartOf="@+id/acp_btn_sF"
            android:text="Fecha" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/acp_tv_fEntrega"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/asignar" />

        <Button
            android:id="@+id/acp_btn_sF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/ic_menu_my_calendar" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1">

        <TextView
            android:id="@+id/acp_tv_pvis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/acp_et_client"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cliente"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/acp_et_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp"
            android:layout_toLeftOf="@+id/acp_btn_asCliente"
            android:layout_toStartOf="@+id/acp_btn_asCliente"
            android:text="Nombrecliente" />

        <Button
            android:id="@+id/acp_btn_asCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/asignar_cliente" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl2">

        <ListView
            android:id="@+id/acp_lv_productos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/acp_lv_productos"
            android:text="@string/asignar_producto" />

    </RelativeLayout>

</RelativeLayout>