<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#779ECB"
    tools:context=".view.Cliente.UiAltaClienteView">
    <RelativeLayout
        android:id="@+id/rlcabezera"
        android:background="@drawable/button_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <TextView

        android:textStyle="bold"
        android:id="@+id/aac_tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alta Cliente"

        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" /></RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/rlcabezera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2">


    </RelativeLayout>

    <Button
        android:background="@drawable/button_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aac_btn_co"
        android:id="@+id/aac_btn_finish"
        android:layout_alignTop="@+id/aac_btn_gCli"
        android:layout_toRightOf="@+id/relativeLayout2"
        android:layout_toEndOf="@+id/relativeLayout2" />

    <Button

        android:background="@drawable/button_default"
        android:id="@+id/aac_btn_gCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aac_btn_gc"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/rl5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/aac_tv_calle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aac_et_calle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Calle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:maxLines="1"
            android:maxLength="60"
            android:hint="@string/aac_et_calle"
            android:background="@drawable/editextdefaul"
            android:id="@+id/aac_et_calle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/aac_tv_poblacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aac_et_poblacion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="poblacion"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:maxLines="1"
            android:maxLength="40"
            android:hint="@string/aac_et_poblacion"
            android:background="@drawable/editextdefaul"
            android:id="@+id/aac_et_poblacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp" />

    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp">

        <TextView
            android:id="@+id/aac_tv_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aac_et_apellidos"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="apellidos"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:maxLines="1"
            android:maxLength="45"
            android:hint="@string/aac_et_apellidos"
            android:background="@drawable/editextdefaul"
            android:id="@+id/aac_et_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp" />

    </RelativeLayout>

    <RelativeLayout
        android:background="@drawable/button_default"
        android:id="@+id/rl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/aac_tv_pvis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aac_et_Proxima_Visita"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Pulsar para asignar proxima Visita"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/aac_et_Proxima_Visita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/aac_tv_pvis"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/icon_price" />

        <Button
            android:background="@drawable/button_default"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/aac_btn_sF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp">

        <TextView
            android:id="@+id/aac_tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aac_et_nombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="nombre"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:maxLines="1"
            android:maxLength="45"
            android:hint="@string/aac_tv_nombre"
            android:background="@drawable/editextdefaul"
            android:id="@+id/aac_et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/aac_tv_nif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/aac_et_nif"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="nif"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/aac_alta_cliente"
            android:background="@drawable/editexttop"
            android:id="@+id/aac_et_nif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp" />

    </RelativeLayout>

</RelativeLayout>