<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.Identificador"
    android:background="#779ECB">
<ImageView

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView2"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />
    <RelativeLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
            android:id="@+id/textUser"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <EditText
        android:drawableLeft="@drawable/user"
        android:hint="@string/am_tv_username"
        android:background="@drawable/editexttop"
        android:padding="10dp"

        android:textColorHint="#cccccc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/la_et_Username"
        android:layout_below="@+id/textUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:id="@+id/textPassword"
        android:layout_below="@+id/la_et_Username"
        android:layout_alignRight="@+id/textUser"
        android:layout_alignEnd="@+id/textUser" />

    <EditText
        android:textColorHint="#cccccc"
        android:drawableLeft="@drawable/password"
        android:hint="@string/am_tv_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/editextbottom"
        android:id="@+id/la_et_Password"
        android:layout_below="@+id/textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesion"
        android:background="@drawable/button_default"
        android:id="@+id/la_btn_login"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"

        android:layout_width="wrap_content"
        android:background="@drawable/button_default"
        android:layout_height="wrap_content"
        android:text="@string/am_btn_gd"
        android:id="@+id/am_btn_dInfo"
        android:layout_below="@+id/la_btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textSize="40dp"
        android:id="@+id/textView23"

        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView13"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="GMWORK!"
        android:id="@+id/textView21"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView23"
        android:layout_alignEnd="@+id/textView23" />


</RelativeLayout>
